fix overflow on mobile and update intersection observer

--- a/src/main.css
+++ b/src/main.css
@@ -18,16 +18,14 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-}
-
-html {
-  font-size: 16px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
+  font-size: 16px;
   font-family: Roboto, sans-serif;
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 h2 {
